# order-tracking

./: .bumpversion.cfg  .drone.yml  .gitignore  .gitlab-ci.yml  .linthtmlrc.yaml  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.json  compose.yaml  docker_env.development  docker_env.production  env.gitea_test  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  runtime_env.development  runtime_env.prod  setup.cfg  test.db
.gitea/: PULL_REQUEST_TEMPLATE.md
.gitea/workflows/: docker.yml  poetry.yml
.github/: dependabot.yml
.github/workflows/: test-publish.yml
app/: __init__.py  constants.py  foos.py  main.py  models.py
app/config/: __init__.py  config.py  database.py
app/routes/: __init__.py  shared.py
app/routes/forms/: __init__.py  router.py
app/routes/order/: controller.py  router.py
app/routes/shipper/: __init__.py  controller.py  router.py
app/schemas/: __init__.py  order.py  piece.py  shipper.py  vendor.py
attic/: Makefile
scripts/: add-orders.sh  dev-add-shippers.sh  dir-add-orders.sh  order-upsert.sh  shipper-add.sh  shipper-id.sh  shippers.sh  vendors-add.sh  vendors-id.sh  vendors.sh
static/: forms.css  index.css  robots.txt  styles.css
templates/: form.html  health.html.j2  index.html.j2  items.html.j2  order.html.j2  orders.html.j2  piece.html.j2
tests/: __init__.py  conftest.py
tests/test_routes/: __init__.py  test_app_routes.py  test_health.py
