[tool.poetry]
name = "order-tracking"
version = "0.3.2-dev0"
description = "Template for fastapi apps"
authors = ["Quien Sabe <qs5779@mail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"  # tests on 3.10 but gitlab sast needs 3.9
fastapi = "^0.115.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
jinja2 = "^3.1.4"
python-multipart = "^0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.10.0"
types-python-dateutil = "^2.9.0.20240316"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
safety = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
