[project]
name = "order-tracking"
description = "Template for fastapi apps"
license = "MIT"
version = "0.4.0"
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.11,<4.0'
dependencies = [
  'fastapi (>=0.115.0,<0.116.0)',
  'pydantic (>=2.7.1,<3.0.0)',
  'sqlalchemy (>=2.0.35,<3.0.0)',
  'uvicorn (>=0.31.0,<0.32.0)',
  'pydantic-settings (>=2.2.1,<3.0.0)',
  'jinja2 (>=3.1.4,<4.0.0)',
  'python-multipart (>=0,<1)',
  'python-dateutil (>=2.9.0.post0,<3.0.0)',
  'loguru (>=0.7.3,<0.8.0)'
]

[tool.poetry]
package-mode = false
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.10.0"
types-python-dateutil = "^2.9.0.20240316"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
